# sphere-bounds-experiment

./: Cargo.toml  LICENSE  index.html
src/: camera.rs  camera_controller.rs  circle.rs  circle.wgsl  grid.rs  line.rs  line.wgsl  main.rs  mouse_movement_tracker.rs  optics.rs  renderer.rs  sphere.rs  sphere.wgsl  sphere_bounds.rs  sphere_bounds.wgsl  sphere_data.rs
src/bounding_rects_pass/: mod.rs  shader.wgsl
src/compute_bounds_pass/: mod.rs  shader.wgsl  temp.wgsl
src/compute_long_axis_pass/: mod.rs  shader.wgsl
src/compute_occluder_circles_pass/: mod.rs  shader.wgsl
src/grids_pass/: mod.rs  shader.wgsl
src/long_axes_pass/: mod.rs  shader.wgsl
src/occluder_circles_pass/: mod.rs  shader.wgsl
src/sky_gradient_pass/: mod.rs  shader.wgsl
src/spheres_pass/: mod.rs  shader.wgsl
